syntax = "proto3";

package message;

option go_package = "./message_pb;message_pb";

enum MsgType {
  UNKNOWN = 0;
  CONNECT = 1;
  CONNECT_ACK = 2;
  SEND = 3;
  SEND_ACK = 4;
  RECEIVE = 5;
  RECEIVE_ACK = 6;
  PING = 7;
  PONG = 8;
  DISCONNECT = 9;
}

message Message {
  MsgType msgType = 1;

  oneof payload {
    ConnectPacket connectPacket = 2;
    ConnectAckPacket connectAckPacket = 3;
    PingPacket pingPacket = 4;
    PongPacket pongPacket = 5;
    SendPacket sendPacket = 6;
  }
}

message ConnectPacket {
  string uid = 1;
  string token = 2;
  string did = 3;
}

message ConnectAckPacket {
  bool ok = 1;
}

message PingPacket {
}

message PongPacket {
}

message SendPacket {
  string content = 1;
}